# llm-self-correct

./: .gitignore  AGENTS.md  Makefile  RAUQ.md  README.md  RUN.md  pyproject.toml  readme.md  requirements.txt  run.md  todo.md  ucot_experiments.ipynb
configs/: att_weights_llama.yaml  default.yaml  gating.yaml  mmlu_rauq.yaml  mt_sanity.yaml  qa_sanity.yaml  summ_sanity.yaml
configs/datasets/: cnn_dailymail.yaml  mmlu.yaml  samsum.yaml  truthfulqa.yaml  wmt14_fren.yaml  wmt19_deen.yaml  xsum.yaml
configs/models/: llama3_8b.yaml
data/: compile_calib.py  plot_rauq_dashboard.py  plot_unc_align.py  round_4.py
data/benchmarks/: focus.md
data/calibration/: calibration_ds.jsonl  mmlu_calib.jsonl  synthetic_calibration.jsonl
data/static/: cnn_dailymail_validation.jsonl  mmlu_abstract_algebra.jsonl  samsum_validation.jsonl  truthfulqa_generation.jsonl  wmt14_fren_validation.jsonl  wmt19_deen_validation.jsonl  xsum_validation.jsonl
env/: requirements.txt
lit/: refs.md
lit/uncertainty_quantification/: RABUQ.md  recurrent_attention_based_uq.md
scripts/: _path.py  ablations.py  calibrate_gating.py  check_datasets.py  curate_datasets.py  fit_threshold.py  plot_uq_vs_alignscore.py  run_bench.py  run_controller.py  run_eval.py  select_heads.py
src/: compile_calib.py  rauq_calib.py  rauq_minimal.py
src/aspects/: __init__.py  cot.py  gater.py  rollback.py  (+1 more)
tests/: test_aspects.py  test_baselines.py  test_datasets.py  test_head_select.py  test_metrics.py  test_rauq.py
ucot/: config.py  controller.py  head_selection.py  rauq.py  threshold.py  uncertainty.py
(+38 files in other folders)
